@@ -2752,7 +2752,7 @@ class Sieve_Action_Vacation extends Sieve_Action {
             $code .= '|' . $i;
         }
         return $code
-            . ') (\\\\(.*\\\\) )?..:..:.. (\\\\(.*\\\\) )?(\\\\+|\\\\-)....( \\\\(.*\\\\))?$" {'
+            . ') (\\\\(.*\\\\) )?..:..:.. (\\\\(.*\\\\) )?((\\\\+|\\\\-)[[:digit:]]{4}|.{1,5})( \\\\(.*\\\\))?$" {'
             . "\n    ";
     }
 
@@ -2767,7 +2767,7 @@ class Sieve_Action_Vacation extends Sieve_Action {
             $code .= '|' . $months[$i - 1];
         }
         return $code
-            . ') (\\\\(.*\\\\) )?.... (\\\\(.*\\\\) )?..:..:.. (\\\\(.*\\\\) )?(\\\\+|\\\\-)....( \\\\(.*\\\\))?$" {'
+            . ') (\\\\(.*\\\\) )?.... (\\\\(.*\\\\) )?..:..:.. (\\\\(.*\\\\) )?((\\\\+|\\\\-)[[:digit:]]{4}|.{1,5})( \\\\(.*\\\\))?$" {'
             . "\n    ";
     }
 
@@ -2780,7 +2780,7 @@ class Sieve_Action_Vacation extends Sieve_Action {
             $code .= '|' . str_repeat('[0 ]', 2 - strlen($i)) . $i;
         }
         return $code
-            . ') (\\\\(.*\\\\) )?... (\\\\(.*\\\\) )?.... (\\\\(.*\\\\) )?..:..:.. (\\\\(.*\\\\) )?(\\\\+|\\\\-)....( \\\\(.*\\\\))?$" {'
+            . ') (\\\\(.*\\\\) )?... (\\\\(.*\\\\) )?.... (\\\\(.*\\\\) )?..:..:.. (\\\\(.*\\\\) )?((\\\\+|\\\\-)[[:digit:]]{4}|.{1,5})( \\\\(.*\\\\))?$" {'
             . "\n    ";
     }
 
